# ethlambda

./: .dockerignore  .gitignore  3sf_mini.html  404.html  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  RELEASE.md  book.toml  checkpoint_sync.html  data_storage.html  ethlambda_architecture.html  flake.nix  fork_choice_visualization.html  index.html  introduction.html  lmd_ghost.html  metrics.html  preview-config.nix  print.html  rpc.html  searcher-c2a407aa.js  searchindex-16a9b1e4.js  searchindex-60b0072f.js  searchindex-6b17334d.js  searchindex-6c7e556e.js  searchindex-739513d3.js  searchindex-84a01bd5.js  searchindex-8bc60176.js  searchindex-ae72efcc.js  searchindex-b5ef6fb2.js  searchindex-beb77040.js  searchindex-c54f2e7a.js  searchindex-c631f979.js  searchindex-eac69af8.js  searchindex-f7745e2b.js  (+5 more)
.claude/skills/devnet-log-review/: SKILL.md
.claude/skills/devnet-runner/: SKILL.md
.claude/skills/test-pr-devnet/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/run-fixture-tests/: action.yml
.github/config/hive/: clients.yaml
.github/prompts/: ai-review.md  pr_review.md
.github/scripts/: check-hive-results.sh  generate_loc_report.py  generate_loc_report.sh  publish_slack.sh  publish_telegram.sh
.github/workflows/: ai-review.yml  ci.yml  daily_ci.yml  daily_loc_report.yml  docker_publish.yaml  pr-main_mdbook.yml  pr_lint_gha.yaml  pr_lint_license.yaml  pr_review_chatgpt.yaml  pr_review_claude.yaml  pr_review_kimi.yaml
crates/blockchain/: Cargo.toml
crates/blockchain/fork_choice/: Cargo.toml
crates/blockchain/src/: aggregation.rs  block_builder.rs  coverage.rs  el_integration.rs  events.rs  execution_engine_tests.rs  fork_choice_tree.rs  key_manager.rs  lib.rs  metrics.rs  reaggregate.rs  spec_test_runner.rs  store.rs  sync_status.rs
crates/blockchain/state_transition/: Cargo.toml
crates/blockchain/state_transition/src/: execution_payload.rs  justified_slots_ops.rs  lib.rs  metrics.rs
crates/blockchain/state_transition/tests/: lean_spec.rs  signature_spectests.rs  signature_types.rs  stf_spectests.rs  types.rs
crates/blockchain/tests/: common.rs  forkchoice_spectests.rs  signature_spectests.rs  signature_types.rs  types.rs
crates/common/crypto/: Cargo.toml
crates/common/crypto/src/: lib.rs  shadow_cost.rs  zk_alloc.rs
crates/common/metrics/: Cargo.toml
crates/common/test-fixtures/: Cargo.toml
crates/common/test-fixtures/src/: common.rs  fork_choice.rs  lib.rs  state_transition.rs  verify_signatures.rs
crates/common/types/: Cargo.toml
crates/common/types/src/: aggregator.rs  attestation.rs  block.rs  checkpoint.rs  constants.rs  el_genesis.rs  execution_payload.rs  genesis.rs  lib.rs  primitives.rs  signature.rs  state.rs  stf.rs
crates/common/types/tests/: ssz_spectests.rs  ssz_types.rs
crates/guest-program/sp1/: Cargo.toml
crates/guest-program/sp1/src/: main.rs
crates/lean-ffi/: Cargo.toml
crates/lean-ffi/src/: lean_glue.c
crates/net/api/: Cargo.toml
crates/net/api/src/: lib.rs
crates/net/ethrex-client/: Cargo.toml
crates/net/ethrex-client/examples/: smoke.rs
crates/net/ethrex-client/src/: auth.rs  client.rs  error.rs  lib.rs  types.rs
crates/net/ethrex-client/tests/: wire_smoke.rs
crates/net/ethrex-engine/: Cargo.toml
crates/net/ethrex-engine/src/: conversion.rs  lib.rs
crates/net/ethrex-engine/tests/: roundtrip.rs
crates/net/ethrex-engine/tests/fixtures/: genesis.json
crates/net/p2p/: Cargo.toml  build.rs
crates/net/p2p/src/: gossipsub.rs  lib.rs  metrics.rs  req_resp.rs  swarm_adapter.rs  swarm_driver.rs
crates/net/p2p/src/ethp2p/: metrics.rs  mod.rs
crates/net/p2p/src/gossipsub/: encoding.rs  handler.rs  messages.rs  mod.rs
crates/net/p2p/src/messages/: blocks_by_root.rs  mod.rs  status.rs
crates/net/p2p/src/req_resp/: codec.rs  encoding.rs  handlers.rs  messages.rs  mod.rs
crates/net/rpc/: Cargo.toml
crates/net/rpc/src/: admin.rs  attestations.rs  base.rs  blocks.rs  core.rs  events.rs  fork_choice.rs  genesis.rs  heap_profiling.rs  lib.rs  metrics.rs  node.rs  spec.rs  test_driver.rs
crates/net/rpc/static/: fork_choice.html
crates/net/rpc/tests/: test_driver_e2e.rs
crates/prover/core/: Cargo.toml
crates/prover/sp1/: Cargo.toml  build.rs
crates/prover/sp1/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: config.rs  error.rs  lib.rs  state_diff.rs  store.rs  types.rs  utils.rs
crates/storage/src/api/: mod.rs  tables.rs  traits.rs
crates/storage/src/backend/: in_memory.rs  mod.rs  rocksdb.rs  tests.rs
docs/: 3sf_mini.md  SUMMARY.md  architecture.md  checkpoint_sync.md  data_storage.md  fork_choice_visualization.md  ghost-fork-choice.md  introduction.md  lmd_ghost.md  metrics.md  proto_array_fork_choice.md  rpc.md  spec_deviations.md
docs/infographics/: ethlambda_architecture.html
docs/plans/: block-building-benchmark.md  engine-api-integration.md  ethrex-inprocess-poc.md  lean-execution-payload-schema.md
docs/superpowers/plans/: 2026-07-01-early-aggregation-start.md
docs/superpowers/specs/: 2026-07-01-early-aggregation-start-design.md
formal/: CLAUDE.md  EthLambda.lean  EthLambdaProofs.lean  README.md  lake-manifest.json  lakefile.toml
formal/EthLambda/: Justifiability.lean
formal/EthLambda/Justifiability/: Classification.lean  Defs.lean  (+4 more)
formal/EthLambdaProofs/: Justifiability.lean
formal/lean-ffi/: build.rs
metrics/: README.md  docker-compose-metrics.yaml
metrics/prometheus/: prometheus.yml
patches/: fix-lexicographic-tiebreaker-test.patch
scripts/engine-api-demo/: README.md  genesis-el.json  run.sh  send-txs.sh
shadow/: README.md  build.sh  cargo-patch.toml
shadow/quinn-udp-patch/: Cargo.toml
shadow/quinn-udp-patch/src/: fallback.rs  lib.rs
tooling/event-monitor/: CONTRACT.md  Cargo.toml  README.md  config.example.toml
tooling/event-monitor/src/: collector.rs  config.rs  hub.rs  lib.rs  main.rs  model.rs  server.rs  timing.rs
tooling/event-monitor/tests/: sse_integration.rs
tooling/event-monitor/web/: app.js  beeswarm.js  demo.js  index.html  propagation.js  style.css
(+35 files in other folders)
