[workspace]
resolver = "3"
default-members = ["bin/ethlambda"]
members = [
    "bin/ethlambda",
    "crates/blockchain/fork_choice",
    "crates/blockchain/state_transition",
    "crates/common/crypto",
    "crates/common/types",
    "crates/net/p2p",
    "crates/net/rpc",
    "crates/storage",
]

[workspace.package]
authors = ["LambdaClass"]
edition = "2024"
keywords = ["ethereum", "blockchain", "consensus", "protocol"]
license = "LICENSE"
readme = "README.md"
repository = "https://github.com/lambdaclass/ethlambda"
rust-version = "1.92.0"
version = "0.1.0"

[workspace.dependencies]
ethlambda_fork_choice = { path = "crates/blockchain/fork_choice" }
ethlambda_state_transition = { path = "crates/blockchain/state_transition" }
ethlambda_crypto = { path = "crates/common/crypto" }
ethlambda_types = { path = "crates/common/types" }
ethlambda_p2p = { path = "crates/net/p2p" }
ethlambda_rpc = { path = "crates/net/rpc" }
ethlambda_storage = { path = "crates/storage" }

thiserror = "2.0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"

tokio = "1.0"

clap = { version = "4.3", features = ["derive", "env"] }

# H256 type
# TODO: switch to ethrex implementation when available
ethereum-types = { version = "0.15.1", features = ["serialize"] }

# SSZ deps
# TODO: roll up our own implementation
ethereum_ssz_derive = "0.8.3"
ethereum_ssz = "0.8.3"
ssz_types = "0.10.1"
tree_hash = "0.9.1"
tree_hash_derive = "0.9.1"
