[workspace]
resolver = "3"
default-members = ["bin/ethlambda"]
members = [
    "bin/ethlambda",
    "crates/blockchain",
    "crates/blockchain/fork_choice",
    "crates/blockchain/state_transition",
    "crates/common/crypto",
    "crates/common/metrics",
    "crates/common/test-fixtures",
    "crates/common/types",
    "crates/net/api",
    "crates/net/p2p",
    "crates/net/rpc",
    "crates/storage",
]

[workspace.package]
authors = ["LambdaClass"]
edition = "2024"
keywords = ["ethereum", "blockchain", "consensus", "protocol"]
license = "LICENSE"
readme = "README.md"
repository = "https://github.com/lambdaclass/ethlambda"
rust-version = "1.92.0"
version = "0.1.0"

[workspace.dependencies]
ethlambda-blockchain = { path = "crates/blockchain" }
ethlambda-fork-choice = { path = "crates/blockchain/fork_choice" }
ethlambda-state-transition = { path = "crates/blockchain/state_transition" }
ethlambda-crypto = { path = "crates/common/crypto" }
ethlambda-metrics = { path = "crates/common/metrics" }
ethlambda-test-fixtures = { path = "crates/common/test-fixtures" }
ethlambda-types = { path = "crates/common/types" }
ethlambda-network-api = { path = "crates/net/api" }
ethlambda-p2p = { path = "crates/net/p2p" }
ethlambda-rpc = { path = "crates/net/rpc" }
ethlambda-storage = { path = "crates/storage" }

tracing = "0.1"
thiserror = "2.0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml_ng = "0.10"
hex = "0.4"

spawned-concurrency = "0.5.0"
spawned-rt = "0.5.0"
tokio = "1.0"

prometheus = "0.14"

clap = { version = "4.3", features = ["derive", "env"] }

# XMSS signatures
leansig = { git = "https://github.com/leanEthereum/leanSig.git", rev = "73bedc26ed961b110df7ac2e234dc11361a4bf25" }

# SSZ implementation
libssz = "0.2"
libssz-derive = "0.2"
libssz-merkle = "0.2"
libssz-types = "0.2"

# Build-time version info
vergen-git2 = { version = "9", features = ["rustc"] }

rand = "0.9"
rocksdb = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
eyre = "0.6"

# Allocator + heap profiling
tikv-jemallocator = { version = "0.6", features = ["stats", "unprefixed_malloc_on_supported_platforms", "profiling"] }
jemalloc_pprof = { version = "0.8", features = ["flamegraph"] }
