[package]
name = "ethlambda-storage"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ethlambda-types.workspace = true

tracing.workspace = true
rocksdb.workspace = true

libssz.workspace = true
libssz-derive.workspace = true

[dev-dependencies]
tempfile = "3"
leansig.workspace = true
rand.workspace = true
