[workspace]

[package]
name = "event-monitor"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "event-monitor"
path = "src/main.rs"

[lib]
name = "event_monitor"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.104"
axum = "0.8.9"
clap = { version = "4.6.3", features = ["derive"] }
eventsource-stream = "0.2.3"
futures-util = "0.3.33"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream", "json"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "signal", "time", "net", "sync", "fs"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
toml = "1.1.3"
tower-http = { version = "0.7.0", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
