[package]
name = "ethlambda-state-transition"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ethlambda-types.workspace = true

thiserror.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true

hex.workspace = true

datatest-stable = "0.3.3"

# For signature tests - uses Store::on_block with actual signature verification
# Note: Do NOT enable skip-signature-verification feature here
ethlambda-blockchain.workspace = true

leansig.workspace = true
tree_hash = "0.12.0"
ethereum_ssz = "0.10.0"
ethereum_ssz_derive = "0.10.0"
ssz_types = "0.14.0"

[[test]]
name = "stf_spectests"
path = "tests/stf_spectests.rs"
harness = false

[[test]]
name = "signature_spectests"
path = "tests/signature_spectests.rs"
harness = false
