[package]
name = "ethlambda-crypto"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ethlambda-types.workspace = true

lean-multisig = { git = "https://github.com/leanEthereum/leanVM.git", rev = "8fcbd779" }
# leansig_wrapper provides XmssPublicKey/XmssSignature types used by lean-multisig's public API
leansig_wrapper = { git = "https://github.com/leanEthereum/leanVM.git", rev = "8fcbd779" }

leansig.workspace = true
thiserror.workspace = true
rand.workspace = true

# Only needed by the `zk-alloc` feature, to mark the global rayon pool's prover
# threads around an arena phase.
rayon = { workspace = true, optional = true }

[features]
# Benchmark-only: route leanVM's bump-arena allocator to proving threads via a
# scoped global allocator. See `src/zk_alloc.rs`. OFF by default.
zk-alloc = ["dep:rayon"]

[dev-dependencies]
hex.workspace = true
