[package]
name = "ethlambda-crypto"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ethlambda-types.workspace = true

# lean-multisig is the XMSS signature aggregation crate from leanVM (the repo was
# previously named leanMultisig). The crate package keeps the lean-multisig name.
lean-multisig = { git = "https://github.com/leanEthereum/leanVM.git", rev = "2498896" }
# leansig_wrapper provides XmssPublicKey/XmssSignature types used by lean-multisig's public API
leansig_wrapper = { git = "https://github.com/leanEthereum/leanVM.git", rev = "2498896" }

leansig.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
hex.workspace = true
