[package]
name = "ethlambda-crypto"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ethlambda-types.workspace = true

# rec_aggregation is leanVM's recursive XMSS aggregation prover/verifier;
# xmss provides the public-key/signature types its API consumes.
rec_aggregation.workspace = true
xmss.workspace = true

thiserror.workspace = true
rand.workspace = true

[features]
shadow-integration = []

[dev-dependencies]
hex.workspace = true
ssz.workspace = true
