[package]
name = "ethlambda-test-fixtures"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ethlambda-types.workspace = true
libssz-types.workspace = true

serde.workspace = true
serde_json.workspace = true
hex.workspace = true
