[package]
name = "ethlambda-types"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
ethereum-types.workspace = true
