[package]
name = "ethlambda-types"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
hex.workspace = true

leansig.workspace = true

libssz.workspace = true
libssz-derive.workspace = true
libssz-merkle.workspace = true
libssz-types.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_yaml_ng.workspace = true
rand.workspace = true

datatest-stable = "0.3.3"

[[test]]
name = "ssz_spectests"
path = "tests/ssz_spectests.rs"
harness = false
