# Standalone workspace: this guest builds for a RISC-V zkVM target via
# `cargo prove build`, so it is excluded from the root workspace and cannot
# inherit its `[workspace.package]` / `[workspace.dependencies]` values.
[workspace]

[package]
name = "zkvm_guest_sp1"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
sp1-zkvm = "6.1.0"
ethlambda-types = { path = "../../common/types" }
ethlambda-state-transition = { path = "../../blockchain/state_transition" }
