[package]
name = "ethlambda-p2p"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ethlambda-blockchain.workspace = true
ethlambda-storage.workspace = true
ethlambda-metrics.workspace = true
ethlambda-types.workspace = true

async-trait = "0.1"

# Fork with request-response feature for outbound protocol selection
libp2p = { git = "https://github.com/lambdaclass/rust-libp2p.git", rev = "cd6cc3b1e5db2c5e23e133c2201c23b063fc4895", features = [
    "full",
] }

snap = "1.1"

tokio.workspace = true
tracing.workspace = true

rand = "0.8"

# Required for NodeEnr parsing
ethrex-p2p = { git = "https://github.com/lambdaclass/ethrex", rev = "1af63a4de7c93eb7413b9b003df1be82e1484c69" }
ethrex-rlp = { git = "https://github.com/lambdaclass/ethrex", rev = "1af63a4de7c93eb7413b9b003df1be82e1484c69" }
ethrex-common = { git = "https://github.com/lambdaclass/ethrex", rev = "1af63a4de7c93eb7413b9b003df1be82e1484c69" }

# SSZ
ethereum_ssz_derive = "0.10.0"
ethereum_ssz = "0.10.0"
ssz_types = "0.14.0"
tree_hash = "0.12.0"
tree_hash_derive = "0.12.0"

sha2 = "0.10"

[dev-dependencies]
hex.workspace = true
