[package]
name = "ethlambda-p2p"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ethlambda-network-api.workspace = true
ethlambda-storage.workspace = true
ethlambda-metrics.workspace = true
ethlambda-types.workspace = true

spawned-concurrency.workspace = true

futures = "0.3"
tokio-stream = "0.1"

# Fork with request-response feature for outbound protocol selection
libp2p = { git = "https://github.com/lambdaclass/rust-libp2p.git", rev = "2f14d0ec9665a01cfb6a02326c90628c4bba521c", features = [
    "full",
] }

snap = "1.1"

tokio.workspace = true
tracing.workspace = true

rand = "0.8"

# Required for NodeEnr parsing
ethrex-p2p = { git = "https://github.com/lambdaclass/ethrex", rev = "1af63a4de7c93eb7413b9b003df1be82e1484c69" }
ethrex-rlp = { git = "https://github.com/lambdaclass/ethrex", rev = "1af63a4de7c93eb7413b9b003df1be82e1484c69" }
ethrex-common = { git = "https://github.com/lambdaclass/ethrex", rev = "1af63a4de7c93eb7413b9b003df1be82e1484c69" }

# SSZ
libssz.workspace = true
libssz-derive.workspace = true
libssz-merkle.workspace = true
libssz-types.workspace = true

sha2 = "0.10"

[dev-dependencies]
hex.workspace = true
