[package]
name = "ethlambda-p2p"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ethlambda-network-api.workspace = true
ethlambda-storage.workspace = true
ethlambda-metrics.workspace = true
ethlambda-types.workspace = true

spawned-concurrency.workspace = true

futures = "0.3"
tokio-stream = "0.1"

# Fork with request-response feature for outbound protocol selection
libp2p = { git = "https://github.com/lambdaclass/rust-libp2p.git", rev = "2f14d0ec9665a01cfb6a02326c90628c4bba521c", features = [
    "full",
] }

snap = "1.1"

tokio.workspace = true
tracing.workspace = true

rand = "0.8"

# Required for NodeEnr parsing
ethrex-p2p = { git = "https://github.com/lambdaclass/ethrex", rev = "1af63a4de7c93eb7413b9b003df1be82e1484c69" }
ethrex-rlp = { git = "https://github.com/lambdaclass/ethrex", rev = "1af63a4de7c93eb7413b9b003df1be82e1484c69" }
ethrex-common = { git = "https://github.com/lambdaclass/ethrex", rev = "1af63a4de7c93eb7413b9b003df1be82e1484c69" }

# SSZ
libssz.workspace = true
libssz-derive.workspace = true
libssz-merkle.workspace = true
libssz-types.workspace = true

sha2 = "0.10"

# ethp2p-rs erasure-coded broadcast (experimental, off by default).
# Pinned to a github.com/lambdaclass/ethp2p-rs commit. ethp2p-rs is an
# INTERNAL repo: building with the `ethp2p` feature requires git credentials
# for it (CI already sets `CARGO_NET_GIT_FETCH_WITH_CLI=true`) plus `protoc`
# on the build host (ethp2p-broadcast compiles its .proto via prost-build).
# The default (feature-off) build needs neither.
ethp2p-broadcast = { path = "../../../ethp2p-rs/crates/ethp2p-broadcast", optional = true }
ethp2p-transport = { path = "../../../ethp2p-rs/crates/ethp2p-transport", optional = true }
# Needed to serialize the RS preamble (a prost message) before publishing.
# Version-matched to ethp2p-broadcast's prost so cargo unifies them.
prost = { version = "0.13", optional = true }

[features]
# Experimental: also broadcast gossip via ethp2p-rs erasure-coded
# broadcast over a parallel QUIC network, alongside libp2p gossipsub.
# Off by default; ethlambda <-> ethlambda only. Requires `protoc` to build.
ethp2p = ["dep:ethp2p-broadcast", "dep:ethp2p-transport", "dep:prost"]

[dev-dependencies]
hex.workspace = true
