[package]
name = "ethlambda-rpc"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
axum = "0.8.1"
tokio.workspace = true
tokio-util.workspace = true
ethlambda-blockchain.workspace = true
ethlambda-fork-choice.workspace = true
ethlambda-metrics.workspace = true
ethlambda-state-transition.workspace = true
ethlambda-storage.workspace = true
ethlambda-test-fixtures.workspace = true
ethlambda-types.workspace = true
libssz.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
jemalloc_pprof.workspace = true

[dev-dependencies]
ethlambda-types.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
